feat: добавлена сортировка по популярности, количеству оценок, новизне

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -18,8 +18,10 @@
 
 .page-container {
     width: 76%;
-    margin: auto;
+    margin: 0 auto;
     box-sizing: border-box;
+    flex-grow: 1;
+    flex-shrink: 0;
 
     @media @tui-tablet {
         margin: 0;
