--- a/src/app/pages/film-list-page/film-list-page.component.less
+++ b/src/app/pages/film-list-page/film-list-page.component.less
@@ -3,7 +3,7 @@
 :host {
     display: flex;
     justify-content: space-between;
-    padding: 60px 16px 0;
+    padding: 60px 16px;
     background-color: var(--tui-background-base-alt);
 
     @media @tui-mobile {
