--- a/src/app/pages/film-list-page/filters/filters.component.html
+++ b/src/app/pages/film-list-page/filters/filters.component.html
@@ -1,2 +1,3 @@
 <app-genres-filter [control]="genresControl"></app-genres-filter>
 <app-date-filter [control]="datesControl"></app-date-filter>
+<app-sorting [control]="sortControl"></app-sorting>
