--- a/src/app/pages/film-list-page/filters/filters.component.less
+++ b/src/app/pages/film-list-page/filters/filters.component.less
@@ -2,11 +2,11 @@
 
 :host {
     display: block;
-    flex-grow: 1;
+    flex-grow: 0;
     flex-shrink: 0;
     min-width: 0;
     margin-right: 24px;
-    width: 26%;
+    width: 250px;
 
     @media @tui-mobile {
         width: 100%;
