fix: иcправлена верстка

--- a/src/app/pages/film-page/film-page.component.less
+++ b/src/app/pages/film-page/film-page.component.less
@@ -34,6 +34,10 @@
 .trailer-block {
     width: 50%;
     flex-shrink: 0;
+
+    @media @tui-mobile {
+        width: 100%;
+    }
 }
 
 .synopsis {
