feat: сервис получения данных фильма заменен на NgRx

--- a/src/app/pages/film-page/film-page.component.html
+++ b/src/app/pages/film-page/film-page.component.html
@@ -1,9 +1,8 @@
 @let film = film$ | async;
-@let isLoading = isLoading$ | async;
 @let visibleItemsCount = (visibleItemsCount$ | async)!;
 @let account = account$ | async;
 
-@if (!isLoading && film) {
+@if (film) {
     <div class="film-row">
         <div>
             <app-poster
