feat: логотип стал кликабельным

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
 @let accountLoading = accountLoading$ | async;
 
 <header class="header">
-    <span class="logo tui-text_h1">Kinoha</span>
+    <a class="logo tui-text_h1" routerLink="/">Kinoha</a>
     <div class="search">
         <app-film-search></app-film-search>
     </div>
